--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@digital-boss/n8n-nodes-xentral",
   "version": "1.0.0",
   "author": "Iñaki Breinbauer",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "description": "Xentral support for n8n",
   "keywords": [
     "n8n",
